[package]
name = "imxrt-rt"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>", "Tom Burdick <tom.burdick@electromatic.us>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/imxrt-rs/imxrt-rt"
description = """
Custom cortex-m-rt specifically for the iMXRT family of processors.
Part of the imxrt-rs project, forked from teensy4-rs.
"""

# TODO if the changes in the cortex-m-rt-macros
# crate are accepted upstream, use the normal
# dependency.
[dependencies]
cortex-m-rt-macros = { path = "macros", version = "=0.6.11" }

[dependencies.cortex-m]
version = "0.6.1"

[build-dependencies]
cc = "1.0.48"

[lib]
bench = false
test = false
