[package]
name = "imxrt-rt"
version = "0.1.7"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/imxrt-rs/imxrt-rt"
description = "Startup and runtime support for i.MX RT processors."
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]

[features]
device = ["cortex-m-rt/device"]

[dependencies]
cfg-if = "1.0"

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
cortex-m-rt = { version = "=0.7.3", features = ["set-vtor", "set-sp"] }

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dev-dependencies]
board = { path = "board" }
cortex-m-rtic = { version = "1.0" }

[target.'cfg(not(all(target_arch = "arm", target_os = "none")))'.dev-dependencies]
goblin = "0.5"

[[example]]
name = "blink-rtic"
required-features = ["board/rtic"]

[workspace]
members = [
    "board",
]

[profile.dev]
opt-level = 0
lto = "off"
panic = "abort"

[profile.release]
opt-level = "s"
lto = "fat"
panic = "abort"
codegen-units = 1

[profile.dev.build-override]
opt-level = 0
codegen-units = 256

[profile.release.build-override]
opt-level = 0
codegen-units = 256
